@@ -1,3 +1,7 @@
+What's new in thtk 5:
+
+Make: --enable-combine was removed.
+
 What's new in thtk 4:
 
 thecl: Support for parsing of 16-bit values.
